--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "boilerplate",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5"
+    "@rails/webpacker": "3.5",
+    "tailwindcss": "^0.6.6"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
