--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CA-outboarding",
+  "name": "ca-outboarding",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
