--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "animate.css": "^3.7.0",
     "tailwindcss": "^0.6.6"
   },
   "devDependencies": {
