--- a/.editorconfig
+++ b/.editorconfig
@@ -3,5 +3,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-indent_style = space
+indent_style = tab
 indent_size = 2
+tab_width = 2
+
